Update for Java 8 compatibility