@@ -37,7 +37,9 @@ allprojects {
 
 
     java {
+//        sourceCompatibility = JavaVersion.VERSION_1_8
         sourceCompatibility = JavaVersion.VERSION_11
+//        sourceCompatibility = JavaVersion.VERSION_17
     }
 
 }
@@ -74,6 +76,9 @@ subprojects {
 
     test {
         useJUnitPlatform()
+
+        // jvmArgs = ['--add-exports=java.base/sun.nio=ALL-UNNAMED']
+
 
         environment("rootPath", "${project.rootDir}")
         environment("nativePath", "${project.rootDir}\\lib\\hadoop-2.8.3")
